カレンダー頭の色変更

--- a/app/assets/stylesheets/_simple_calendar.scss
+++ b/app/assets/stylesheets/_simple_calendar.scss
@@ -1,6 +1,11 @@
+@import './variable';
+
 .simple-calendar {
+    height: 100%;
+    width: 100%;
     .calendar-heading {
-        
+        height: 100px;
+        background-color: $blue;
     }
     .day {padding: 20px}
     .wday-0 {}
