--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,7 @@
 @import "./reset";
-@import "./simple_calendar"
+@import "./simple_calendar";
+@import "./variable";
+
+.wrapper {
+  position: fixed;
+}
