--- a/app/views/scheduleds/index.html.haml
+++ b/app/views/scheduleds/index.html.haml
@@ -1,2 +1,3 @@
-= month_calendar do |date|
-  = date.to_formatted_s(:short)
+.wrapper
+  = month_calendar do |date|
+    = date.to_formatted_s(:short)
