--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -3,9 +3,9 @@
     <div class="calendar-heading__left">
     </div>
     <div class="calendar-heading__center">
-      <%= link_to t('simple_calendar.previous', default: 'Previous'), calendar.url_for_previous_view %>
+      <%= link_to t('simple_calendar.previous', default: '<<'), calendar.url_for_previous_view %>
       <span class="calendar-title"><%= t('date.month_names')[start_date.month] %> <%= start_date.year %></span>
-      <%= link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view %>
+      <%= link_to t('simple_calendar.next', default: '>>'), calendar.url_for_next_view %>
     </div>
     <div class="calendar-heading__right">
     </div>
