--- a/app/views/simple_calendar/_month_calendar.html.haml
+++ b/app/views/simple_calendar/_month_calendar.html.haml
@@ -11,7 +11,10 @@
         = start_date.year
       = link_to calendar.url_for_next_view do
         %i.fa.fa-angle-double-right
-    .calendar-heading__right user
+    .calendar-heading__right
+      .user user
+      = link_to 'logout' do
+        .box ログアウト
   %table.table.table-striped
     %thead
       %tr
