週間カレンダーに遷移出来るようにした

--- a/app/views/simple_calendar/_month_calendar.html.haml
+++ b/app/views/simple_calendar/_month_calendar.html.haml
@@ -1,7 +1,7 @@
 .simple-calendar
   .calendar-heading
     .calendar-heading__left
-      = link_to 'weekly' do
+      = link_to 'scheduled' do
         .box Weekly
     .calendar-heading__center
       = link_to calendar.url_for_previous_view do
