--- a/app/views/simple_calendar/_week_calendar.html.haml
+++ b/app/views/simple_calendar/_week_calendar.html.haml
@@ -1,13 +1,23 @@
 .simple-calendar
   .calendar-heading
-    = link_to t('simple_calendar.previous', default: 'Previous'), calendar.url_for_previous_view
-    - if calendar.number_of_weeks == 1
-      %span.calendar-title
-        Week #{calendar.week_number}
-    - else
-      %span.calendar-title
-        Week #{calendar.week_number} - #{calendar.end_week}
-    = link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view
+    .calendar-heading__left
+      = link_to '/' do
+        .box monthly
+    .calendar-heading__center
+      = link_to  calendar.url_for_previous_view do
+        %i.fa.fa-angle-double-left
+      - if calendar.number_of_weeks == 1
+        %span.calendar-title
+          Week #{calendar.week_number}
+      - else
+        %span.calendar-title
+          Week #{calendar.week_number} - #{calendar.end_week}
+      = link_to calendar.url_for_next_view do
+        %i.fa.fa-angle-double-right
+    .calendar-heading__right
+      .user user
+      = link_to 'logout' do
+        .box ログアウト
   %table.table.table-striped
     %thead
       %tr
