--- a/app/views/simple_calendar/_month_calendar.html.haml
+++ b/app/views/simple_calendar/_month_calendar.html.haml
@@ -3,6 +3,8 @@
     .calendar-heading__left
       = link_to 'scheduled' do
         .box Weekly
+      = link_to 'meetings/new' do
+        .box New scheduleds
     .calendar-heading__center
       = link_to calendar.url_for_previous_view do
         %i.fa.fa-angle-double-left
