--- a/app/views/scheduleds/show.html.haml
+++ b/app/views/scheduleds/show.html.haml
@@ -1,3 +1,6 @@
 .wrapper
-  = week_calendar do |date|
+  = week_calendar events: @meetings do |date, meetings|
     = date.to_formatted_s(:short)
+    - meetings.each do |meeting|
+      .meeting
+        =meeting.name
