devise　ログイン画面見た目変更

--- a/app/views/simple_calendar/_month_calendar.html.haml
+++ b/app/views/simple_calendar/_month_calendar.html.haml
@@ -14,7 +14,8 @@
       = link_to calendar.url_for_next_view do
         %i.fa.fa-angle-double-right
     .calendar-heading__right
-      .user user
+      .user 
+        = current_user.name
       = link_to 'logout' do
         .box ログアウト
   %table.table.table-striped
