ログアウト追加

--- a/app/views/simple_calendar/_month_calendar.html.haml
+++ b/app/views/simple_calendar/_month_calendar.html.haml
@@ -16,7 +16,7 @@
     .calendar-heading__right
       .user 
         = current_user.name
-      = link_to 'logout' do
+      = link_to destroy_user_session_path, method: :delete do
         .box ログアウト
   %table.table.table-striped
     %thead
