--- a/app/views/simple_calendar/_month_calendar.html.haml
+++ b/app/views/simple_calendar/_month_calendar.html.haml
@@ -4,7 +4,7 @@
       = link_to 'scheduled' do
         .box Weekly
       = link_to 'meetings/new' do
-        .box New scheduleds
+        .box スケジュール追加
     .calendar-heading__center
       = link_to calendar.url_for_previous_view do
         %i.fa.fa-angle-double-left
