日本時間表示にする

--- a/app/assets/stylesheets/_simple_calendar.scss
+++ b/app/assets/stylesheets/_simple_calendar.scss
@@ -22,14 +22,14 @@
             }
         }
         &__center{
-            padding:10px;
+            padding-top:20px;
             a {
                 color: black;
                 font-size: 30px;
                 text-decoration: none;
             }
             .calendar-title {
-                font-size: 50px;
+                font-size: 40px;
             }
         }
         &__right {
