当日に色付け

--- a/app/assets/stylesheets/_simple_calendar.scss
+++ b/app/assets/stylesheets/_simple_calendar.scss
@@ -75,7 +75,9 @@
     .wday-5 {}
     .wday-6 {}
 
-    .today {}
+    .today {
+        background-color: #FFFFCC;
+    }
     .past {}
     .future {}
 
