--- a/app/assets/stylesheets/_simple_calendar.scss
+++ b/app/assets/stylesheets/_simple_calendar.scss
@@ -3,6 +3,11 @@
 .simple-calendar {
     height: 100vh;
     width: 100vw;
+    .calender-left {
+        float: left;
+        height: 100%;
+        width: 120px;
+    }
     .calendar-heading {
         display: flex;
         justify-content: space-between;
@@ -52,7 +57,7 @@
 
     .table-striped {
         height: calc(100% - 100px);
-        width: 100%;
+        width: calc(100% - 120px);
         table-layout: fixed;
     }
     th {
@@ -66,6 +71,11 @@
     .day {
         text-align: center;
         border: 1px solid black;
+    }
+
+    .meeting {
+        background-color: $blue;
+        margin-bottom: 1px;
     }
     .wday-0 {}
     .wday-1 {}
