カウントダウン追加

--- a/app/views/simple_calendar/_month_calendar.html.haml
+++ b/app/views/simple_calendar/_month_calendar.html.haml
@@ -1,5 +1,15 @@
 .simple-calendar
   .calender-left
+    %h2 東京オリンピックまで
+    %p.timer あと 
+    %span#day
+    日
+    %span#hour 
+    時間
+    %span#min 
+    分
+    %span#sec 
+    秒
   .calendar-heading
     .calendar-heading__left
       = link_to 'scheduled' do
