週間のカレンダーにもカウンター追加

--- a/app/assets/stylesheets/_simple_calendar.scss
+++ b/app/assets/stylesheets/_simple_calendar.scss
@@ -7,6 +7,9 @@
         float: left;
         height: 100%;
         width: 120px;
+        .counter-title {
+            border: 1px solid black;
+        }
     }
     .calendar-heading {
         display: flex;
